examples/test/testpolicy15892.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15892
  namespace: namespace346
spec:
  podSelector:
    matchLabels:
      key3: value7
      key27: value32
      key7: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value23
          key21: value46
      podSelector:
        matchLabels:
          key21: value2
